fix: alignments

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ p {
   top: 50%;
   left: 50%;
   font-size: 20px;
+  text-align: right;
 } 
 
 a {
